default/objects/Trigger_Action__mdt/Trigger_Action__mdt.object-meta.xml
<CustomObject>
    <description>Action calls to the TKWW Trigger Architecture (Q4 2020), mapping a particular SObject/Invocation to an Implementing Class</description>
    <label>Trigger Action</label>
    <pluralLabel>Trigger Actions</pluralLabel>
</CustomObject>