default/objects/Trigger_Action__mdt/fields/AfterDelete__c.field-meta.xml
<CustomField>
    <fullName>AfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, this SObject Implementation will be evaluated for AfterDelete changes</description>
    <inlineHelpText>If selected, this SObject Implementation will be evaluated for AfterDelete changes</inlineHelpText>
    <label>AfterDelete</label>
    <type>Checkbox</type>
</CustomField>