default/objects/Trigger_Action__mdt/fields/AfterInsert__c.field-meta.xml
<CustomField>
    <fullName>AfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, this SObject Implementation will be evaluated for AfterInsert changes</description>
    <inlineHelpText>If selected, this SObject Implementation will be evaluated for AfterInsert changes</inlineHelpText>
    <label>AfterInsert</label>
    <type>Checkbox</type>
</CustomField>