default/objects/Trigger_Action__mdt/fields/AfterUndelete__c.field-meta.xml
<CustomField>
    <fullName>AfterUndelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, this SObject Implementation will be evaluated for AfterUndelete changes</description>
    <inlineHelpText>If selected, this SObject Implementation will be evaluated for AfterUndelete changes</inlineHelpText>
    <label>AfterUndelete</label>
    <type>Checkbox</type>
</CustomField>