default/objects/Trigger_Action__mdt/fields/AfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>AfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, this SObject Implementation will be evaluated for AfterUpdate changes</description>
    <inlineHelpText>If selected, this SObject Implementation will be evaluated for AfterUpdate changes</inlineHelpText>
    <label>AfterUpdate</label>
    <type>Checkbox</type>
</CustomField>