default/objects/Trigger_Action__mdt/fields/BeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>BeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, this SObject Implementation will be evaluated for BeforeDelete changes</description>
    <inlineHelpText>If selected, this SObject Implementation will be evaluated for BeforeDelete changes</inlineHelpText>
    <label>BeforeDelete</label>
    <type>Checkbox</type>
</CustomField>