default/objects/Trigger_Action__mdt/fields/BeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>BeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, this SObject Implementation will be evaluated for BeforeInsert changes</description>
    <inlineHelpText>If selected, this SObject Implementation will be evaluated for BeforeInsert changes</inlineHelpText>
    <label>BeforeInsert</label>
    <type>Checkbox</type>
</CustomField>