default/objects/Trigger_Action__mdt/fields/BeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>BeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, this SObject Implementation will be evaluated for BeforeUpdate changes</description>
    <inlineHelpText>If selected, this SObject Implementation will be evaluated for BeforeUpdate changes</inlineHelpText>
    <label>BeforeUpdate</label>
    <type>Checkbox</type>
</CustomField>