default/objects/Trigger_Action__mdt/fields/BlockRecursion__c.field-meta.xml
<CustomField>
    <fullName>BlockRecursion__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, ensures that this SObject Implementation occurs at most once for each Trigger context</description>
    <inlineHelpText>If selected, ensures that this SObject Implementation occurs at most once for each Trigger context</inlineHelpText>
    <label>BlockRecursion</label>
    <type>Checkbox</type>
</CustomField>