default/objects/Trigger_Action__mdt/fields/Bulk_After__c.field-meta.xml
<CustomField>
    <fullName>Bulk_After__c</fullName>
    <label>Bulk After</label>
    <length>40</length>
    <type>Text</type>
</CustomField>