default/objects/Trigger_Action__mdt/fields/Bulk_Before__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Before__c</fullName>
    <description>Static class to execute before this SObject Implementation. NOTE - this class is only instantiated once per Transaction</description>
    <inlineHelpText>Static class to execute before this SObject Implementation. NOTE - this class is only instantiated once per Transaction</inlineHelpText>
    <label>Bulk Before</label>
    <length>40</length>
    <type>Text</type>
</CustomField>