default/objects/Trigger_Action__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A more detailed explanation of the action defined by this SObject Implementation</description>
    <inlineHelpText>A more detailed explanation of the action defined by this SObject Implementation</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>