default/objects/Trigger_Action__mdt/fields/Disabled_User__c.field-meta.xml
<CustomField>
    <fullName>Disabled_User__c</fullName>
    <description>Disable this SObject Implementation for the specified User Id</description>
    <inlineHelpText>Disable this SObject Implementation for the specified User Id</inlineHelpText>
    <label>Disabled User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>