default/objects/Trigger_Action__mdt/fields/Execute_Class__c.field-meta.xml
<CustomField>
    <fullName>Execute_Class__c</fullName>
    <description>Apex class implementing executeMethod for this SObject Implementation</description>
    <inlineHelpText>Apex class implementing executeMethod for this SObject Implementation</inlineHelpText>
    <label>Execute Class</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>