default/objects/Trigger_Action__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether or not to evaluate this SObject Implementation in the Run context</description>
    <inlineHelpText>Determines whether or not to evaluate this SObject Implementation in the Run context</inlineHelpText>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>