default/objects/Trigger_Action__mdt/fields/isActiveForTesting__c.field-meta.xml
<CustomField>
    <fullName>isActiveForTesting__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether or not to evaluate this Implementation in the Test context</description>
    <inlineHelpText>Determines whether or not to evaluate this Implementation in the Test context</inlineHelpText>
    <label>isActiveForTesting</label>
    <type>Checkbox</type>
</CustomField>