default/objects/Trigger_Action__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>SObject for which to evaluate this Implementation</description>
    <inlineHelpText>SObject for which to evaluate this Implementation</inlineHelpText>
    <label>Object Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>