default/objects/Trigger_Action__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>If specified, determines the execution order of Implementations in a Trigger execution context</description>
    <inlineHelpText>If specified, determines the execution order of Implementations in a Trigger execution context</inlineHelpText>
    <label>Order</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>