default/objects/Trigger_Action__mdt/fields/RecordType_Names__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Names__c</fullName>
    <description>If supplied, the SObject Implementation will only apply to instances with a RecordType Developer Name in this comma-delimited list</description>
    <inlineHelpText>If supplied, the SObject Implementation will only apply to instances with a RecordType Developer Name in this comma-delimited list</inlineHelpText>
    <label>RecordType Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>