default/objects/Trigger_Action__mdt/listViews/Lead_TriggerActions.listView-meta.xml
<ListView>
    <fullName>Lead_TriggerActions</fullName>
    <columns>Object_Name__c</columns>
    <columns>MasterLabel</columns>
    <columns>Execute_Class__c</columns>
    <columns>RecordType_Names__c</columns>
    <columns>Order__c</columns>
    <columns>Bulk_Before__c</columns>
    <columns>Bulk_After__c</columns>
    <columns>BlockRecursion__c</columns>
    <columns>BeforeInsert__c</columns>
    <columns>BeforeUpdate__c</columns>
    <columns>AfterInsert__c</columns>
    <columns>AfterUpdate__c</columns>
    <columns>BeforeDelete__c</columns>
    <columns>AfterDelete__c</columns>
    <columns>AfterUndelete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>equals</operation>
        <value>Lead</value>
    </filters>
    <filters>
        <field>isActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Lead TriggerActions (Active)</label>
</ListView>