default/objects/Trigger_Action__mdt/listViews/OppTriggerActions_Active.listView-meta.xml
<ListView>
    <fullName>OppTriggerActions_Active</fullName>
    <columns>Object_Name__c</columns>
    <columns>MasterLabel</columns>
    <columns>RecordType_Names__c</columns>
    <columns>Execute_Class__c</columns>
    <columns>Bulk_Before__c</columns>
    <columns>Bulk_After__c</columns>
    <columns>Order__c</columns>
    <columns>isActive__c</columns>
    <columns>isActiveForTesting__c</columns>
    <columns>BlockRecursion__c</columns>
    <columns>BeforeInsert__c</columns>
    <columns>BeforeUpdate__c</columns>
    <columns>BeforeDelete__c</columns>
    <columns>AfterInsert__c</columns>
    <columns>AfterUpdate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <label>OppTriggerActions(Active)</label>
</ListView>